<resources>
    <!-- TODO: Perfect English translation -->
    <string name="app_name">LocalPrintService</string>
    <string name="print_manager">printer manager</string>
    <string name="action_system_print_service">system_print_service</string>
    <string name="action_settings">Settings</string>
    <string name="print_service_notification">print service notification</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="initializing_print_service">Initializing Print Service ...</string>
    <string name="ready_to_initialize">Need to initialize for the first time, please click OK !</string>
    <string name="initialization_failure">Print service initialization failure ,please try again !</string>
    <string name="initialization_suceess">Print service initialization suceess</string>
    <string name="no_need_for_initialization">No need for initialization</string>
    <string name="new_printer__notification">New device detected</string>
    <string name="whether_add_new_printer">Add a new printer now?</string>
    <string name="added_device">added devices</string>
    <string name="add_new_printers">add new printers</string>
    <string name="local_printers">local printers</string>
    <string name="network_printers">network printers</string>
    <string name="add_a_local_printer">Add a new local printer</string>
    <string name="the_printer_can_be_added_directly">the printer can be added directly</string>
    <string name="add_success">Add success</string>
    <string name="empty">empty</string>
    <string name="tuning">Tuning</string>
    <string name="delete">Delete</string>
    <string name="the_printer_is_untested">the printer is untested</string>
    <string name="searching">Searching</string>
    <string name="search_finished">Search completed</string>
    <string name="select_brand">Plaease selsect a manufacturer</string>
    <string name="select_model">Please select a model</string>
    <string name="add_fail">Add failed</string>
    <string name="adding">Adding</string>
    <string name="set_name">Please set a name</string>
    <string name="test_page">test page</string>
    <string name="printer_setting">Printer Setting</string>
    <string name="deleting">Deleting</string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="delete_failed">Delete failed</string>
    <string name="print_failed">Print failed</string>
    <string name="print_copy_file_failed">Copy the file failed</string>
    <string name="printing">Printing</string>
    <string name="start_printing">Start printing</string>
    <string name="print_error">Printing error</string>
    <string name="query_error">Query Error</string>
    <string name="confirm_delete">Confirm delete ?</string>
    <string name="please_confirm_component">Please confirm the date file in /system dictionary and try again!</string>
    <string name="color">Color</string>
    <string name="black_white"><![CDATA[black & white]]></string>
    <string name="update_success">Update successfully.</string>
    <string name="updating">Updating</string>
    <string name="no_double_side">No Double Side</string>
    <string name="paper_size">paper size</string>
    <string name="color_mode">color mode</string>
    <string name="duplx_mode">duplx mode</string>
    <string name="update_failed">Update failed.</string>
    <string name="action_print_job_manager">print job manager</string>
    <string name="document_name">document name</string>
    <string name="device">device</string>
    <string name="status">status</string>
    <string name="size">size</string>
    <string name="operation">operation</string>
    <string name="pause_all">pause all</string>
    <string name="start_all">start all</string>
    <string name="cancel_all">cancel all</string>
    <string name="pause">pause</string>
    <string name="remove">remove</string>
    <string name="canceled">Canceled.</string>
    <string name="cancel_error">Cancel error.</string>
    <string name="paused">Paused</string>
    <string name="pause_error">Pause error.</string>
    <string name="started">Started.</string>
    <string name="start_error">Start error.</string>
    <string name="error">error</string>
    <string name="ready">ready</string>
    <string name="waiting_for_printer">Waiting for printer to be ready.</string>
    <string name="unknown">unknown</string>
    <string name="resume">resume</string>
    <string name="resumed">resumed</string>
    <string name="resume_error">resume error</string>
    <string name="print_info">print info</string>
    <string name="option">option</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="share_printer">share printer</string>
    <string name="add_net_printers">add net printers</string>
    <string name="add_a_network_printer">add a network printer</string>
    <string name="set_netprinter_url">Please set a url</string>
    <string name="hint_windows_netprinter">Windows printers: \n    smb://Win_admin：passwd@Winip/printer_name</string>
    <string name="hint_Linux_netprinter">Linux printers: \n    ipp://ip:631/printers/printers_name</string>
    <string name="hint_built_in_netprinter">Printer with network function: \n    socket://ip</string>
    <string name="hint_other_printer">Other: \n    lpd://ip/queue</string>
    <string name="name_error_with_space">Printer name cannot contain space</string>
    <string name="url_error_with_null">Printer url cannot be null</string>
    <string name="name_error_with_null">Printer name cannot be null</string>
</resources>
