<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.openthos.printer.testusb.MainActivity">

    <item
        android:id="@+id/action_print_job"
        android:orderInCategory="98"
        android:title="@string/action_print_job_manager"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_system_print_service"
        android:orderInCategory="99"
        android:title="@string/action_system_print_service"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

</menu>
