<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.openthos.printer.localprint.ui.JobManagerActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/document_name" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/device"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/status"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/size"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/operation"
            android:textSize="20sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_above="@+id/listview_job"
        android:id="@+id/view2" />

    <ListView
        android:id="@+id/listview_job"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/relativeLayout" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/listview_job"
        android:id="@+id/view3" />
    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignLeft="@+id/listview_job"
        android:layout_below="@+id/linearLayout"
        android:layout_alignBottom="@+id/view3" />
    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignRight="@+id/listview_job"
        android:layout_alignTop="@+id/view2"
        android:layout_alignBottom="@+id/view3" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_all"
            android:id="@+id/button_pause_all" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_all"
            android:id="@+id/button_start_all"
            android:layout_toRightOf="@+id/button_pause_all"
            android:layout_toEndOf="@+id/button_pause_all" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_all"
            android:id="@+id/button_cancel_all"
            android:layout_toRightOf="@+id/button_start_all"
            android:layout_toEndOf="@+id/button_start_all" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/button_ok"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>
