<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:weightSum="1">



    <android.support.v7.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_width="match_parent">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView_printer_name"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_below="@+id/toolbar" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/scrollView"
        android:layout_below="@+id/textView_printer_name">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paper_size"
                android:id="@+id/textView5" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_media_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_mode"
                android:id="@+id/textView7" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_color_mode" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duplx_mode"
                android:id="@+id/textView8" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_duplex_mode" />
        </TableRow>
    </TableLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/scrollView">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/button_cancel"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/button_ok" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:id="@+id/button_ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </LinearLayout>

</RelativeLayout>
